# RenderingFramework

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: DefaultExecutable.cmake
shaders/: CMakeLists.txt  Simple.frag  Simple.geom  Simple.vert
shaders/ImpostorTest/: Impostor.frag  Impostor.geom  Impostor.vert
src/exe/ExampleProject/: main.cpp
src/exe/ImpostorTest/: main.cpp
src/util/: Defines.h  OrbitCamera.cpp  OrbitCamera.h  Primitives.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h
